@@ -1,0 +1,130 @@
+static const char *char_names[] = {
+"Nul",
+"Soh",
+"Stx",
+"Etx",
+"Eot",
+"Enq",
+"Ack",
+"Bel",
+"Backspace",
+"Tab",
+"Newline",
+"Vt",
+"Page",
+"Return",
+"So",
+"Si",
+"Dle",
+"Dc1",
+"Dc2",
+"Dc3",
+"Dc4",
+"Nak",
+"Syn",
+"Etb",
+"Can",
+"Em",
+"Sub",
+"Esc",
+"Fs",
+"Gs",
+"Rs",
+"Us",
+"Space",
+"EXCLAMATION_MARK",
+"QUOTATION_MARK",
+"NUMBER_SIGN",
+"DOLLAR_SIGN",
+"PERCENT_SIGN",
+"AMPERSAND",
+"APOSTROPHE",
+"LEFT_PARENTHESIS",
+"RIGHT_PARENTHESIS",
+"ASTERISK",
+"PLUS_SIGN",
+"COMMA",
+"HYPHEN-MINUS",
+"FULL_STOP",
+"SOLIDUS",
+"DIGIT_ZERO",
+"DIGIT_ONE",
+"DIGIT_TWO",
+"DIGIT_THREE",
+"DIGIT_FOUR",
+"DIGIT_FIVE",
+"DIGIT_SIX",
+"DIGIT_SEVEN",
+"DIGIT_EIGHT",
+"DIGIT_NINE",
+"COLON",
+"SEMICOLON",
+"LESS-THAN_SIGN",
+"EQUALS_SIGN",
+"GREATER-THAN_SIGN",
+"QUESTION_MARK",
+"COMMERCIAL_AT",
+"LATIN_CAPITAL_LETTER_A",
+"LATIN_CAPITAL_LETTER_B",
+"LATIN_CAPITAL_LETTER_C",
+"LATIN_CAPITAL_LETTER_D",
+"LATIN_CAPITAL_LETTER_E",
+"LATIN_CAPITAL_LETTER_F",
+"LATIN_CAPITAL_LETTER_G",
+"LATIN_CAPITAL_LETTER_H",
+"LATIN_CAPITAL_LETTER_I",
+"LATIN_CAPITAL_LETTER_J",
+"LATIN_CAPITAL_LETTER_K",
+"LATIN_CAPITAL_LETTER_L",
+"LATIN_CAPITAL_LETTER_M",
+"LATIN_CAPITAL_LETTER_N",
+"LATIN_CAPITAL_LETTER_O",
+"LATIN_CAPITAL_LETTER_P",
+"LATIN_CAPITAL_LETTER_Q",
+"LATIN_CAPITAL_LETTER_R",
+"LATIN_CAPITAL_LETTER_S",
+"LATIN_CAPITAL_LETTER_T",
+"LATIN_CAPITAL_LETTER_U",
+"LATIN_CAPITAL_LETTER_V",
+"LATIN_CAPITAL_LETTER_W",
+"LATIN_CAPITAL_LETTER_X",
+"LATIN_CAPITAL_LETTER_Y",
+"LATIN_CAPITAL_LETTER_Z",
+"LEFT_SQUARE_BRACKET",
+"REVERSE_SOLIDUS",
+"RIGHT_SQUARE_BRACKET",
+"CIRCUMFLEX_ACCENT",
+"LOW_LINE",
+"GRAVE_ACCENT",
+"LATIN_SMALL_LETTER_A",
+"LATIN_SMALL_LETTER_B",
+"LATIN_SMALL_LETTER_C",
+"LATIN_SMALL_LETTER_D",
+"LATIN_SMALL_LETTER_E",
+"LATIN_SMALL_LETTER_F",
+"LATIN_SMALL_LETTER_G",
+"LATIN_SMALL_LETTER_H",
+"LATIN_SMALL_LETTER_I",
+"LATIN_SMALL_LETTER_J",
+"LATIN_SMALL_LETTER_K",
+"LATIN_SMALL_LETTER_L",
+"LATIN_SMALL_LETTER_M",
+"LATIN_SMALL_LETTER_N",
+"LATIN_SMALL_LETTER_O",
+"LATIN_SMALL_LETTER_P",
+"LATIN_SMALL_LETTER_Q",
+"LATIN_SMALL_LETTER_R",
+"LATIN_SMALL_LETTER_S",
+"LATIN_SMALL_LETTER_T",
+"LATIN_SMALL_LETTER_U",
+"LATIN_SMALL_LETTER_V",
+"LATIN_SMALL_LETTER_W",
+"LATIN_SMALL_LETTER_X",
+"LATIN_SMALL_LETTER_Y",
+"LATIN_SMALL_LETTER_Z",
+"LEFT_CURLY_BRACKET",
+"VERTICAL_LINE",
+"RIGHT_CURLY_BRACKET",
+"TILDE",
+"Rubout",
+0};
